--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,17 @@
 // Colors 
+// #EAE7DC >> #D8C3A5 >> #8E8D8A >> #E98074 >> #E85A4F
+$primary: #E85A4F;
+$secondary: #E98074;
+$normal: #8E8D8A;
+$light: #D8C3A5;
+$bg: #EAE7DC;
 
 
 // Sizes
+$xs-size: 0.5rem;
+$sm-size: 1rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
+
+$radius: 3px;
