--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,8 @@
 @import './base/settings';
 @import './base/base';
 @import './base/common';
+
+@import './components/header';
+@import './components/questions';
+@import './components/ask';
+@import './components/question-page';
